Archive2/d5/e781c971aa54b0/output
main.cpp: In function 'int main()':
main.cpp:18:36: error: use of deleted function 'void X::processPointer(T*) [with T = void]'
     x.processPointer<void>((void*)0);
                                    ^
main.cpp:13:17: error: declared here
 template<> void X::processPointer<void>(void*) = delete;
                 ^
